--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -125,7 +125,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>H:\Project_VS2019\NutEngine\Engine\Inc;E:\DirectX-Headers\include\directx;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\Project_VS2019\NutEngine\Engine\Inc;E:\DirectX-Headers\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -157,8 +157,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="External\OpenFbx\miniz.h" />
+    <ClInclude Include="External\OpenFbx\ofbx.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="Inc\Framework\Codec\BMP.h" />
     <ClInclude Include="Inc\Framework\Common\Allocator.hpp" />
     <ClInclude Include="Inc\Framework\Common\AssetLoader.h" />
     <ClInclude Include="Inc\Framework\Common\BaseApplication.h" />
@@ -167,16 +168,23 @@
     <ClInclude Include="Inc\Framework\Common\GraphicsManager.h" />
     <ClInclude Include="Inc\Framework\Common\Image.h" />
     <ClInclude Include="Inc\Framework\Common\MemoryManager.hpp" />
+    <ClInclude Include="Inc\Framework\Common\SceneNode.h" />
     <ClInclude Include="Inc\Framework\Common\SceneObject.h" />
     <ClInclude Include="Inc\Framework\Interface\IApplication.h" />
     <ClInclude Include="Inc\Framework\Interface\ImageParser.h" />
     <ClInclude Include="Inc\Framework\Interface\IRuntimeModule.h" />
+    <ClInclude Include="Inc\Framework\Interface\ISceneParser.h" />
+    <ClInclude Include="Inc\Framework\Math\Guid.h" />
     <ClInclude Include="Inc\Framework\Math\NutMath.h" />
+    <ClInclude Include="Inc\Framework\Parser\BMP.h" />
+    <ClInclude Include="Inc\Framework\Parser\FbxParser.h" />
     <ClInclude Include="Inc\RHI\D3D12GrahpicsManager.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="External\OpenFbx\miniz.cpp" />
+    <ClCompile Include="External\OpenFbx\ofbx.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
