--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -49,14 +49,14 @@
     <Filter Include="External\OpenFbx">
       <UniqueIdentifier>{e179b875-dfdf-48fc-820e-e8735bcc340a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Inc\Framework\Parser">
-      <UniqueIdentifier>{4df40bb6-0cd4-4bf9-9720-300b9bd3c155}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Src\Framework\Parser">
       <UniqueIdentifier>{6e9dbe9a-4228-4b0f-8915-36ac3aa7b6ad}</UniqueIdentifier>
     </Filter>
     <Filter Include="Src\Framework\Math">
       <UniqueIdentifier>{8e876bea-a5c3-4f16-8a19-23960c397a9f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Inc\Framework\Parser">
+      <UniqueIdentifier>{4df40bb6-0cd4-4bf9-9720-300b9bd3c155}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -190,5 +190,16 @@
     <FxCompile Include="Asset\Shader\simple_ps.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
+    <FxCompile Include="Asset\Shader\vs.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Asset\Shader\ps.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Asset\Shader\type.hlsli">
+      <Filter>Shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
