Free roaming camera finish,Use multiple vertex buffers for input, use Draw instead of DrawIndexed

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="Inc\Framework\Common\AssetLoader.h" />
     <ClInclude Include="Inc\Framework\Common\BaseApplication.h" />
     <ClInclude Include="Inc\Framework\Common\Buffer.h" />
+    <ClInclude Include="Inc\Framework\Common\CameraManager.h" />
     <ClInclude Include="Inc\Framework\Common\GfxConfiguration.h" />
     <ClInclude Include="Inc\Framework\Common\GraphicsManager.h" />
     <ClInclude Include="Inc\Framework\Common\Image.h" />
@@ -206,6 +207,7 @@
     <ClCompile Include="Src\Framework\Common\Allocator.cpp" />
     <ClCompile Include="Src\Framework\Common\AssetLoader.cpp" />
     <ClCompile Include="Src\Framework\Common\BaseApplication.cpp" />
+    <ClCompile Include="Src\Framework\Common\CameraManager.cpp" />
     <ClCompile Include="Src\Framework\Common\GraphicsManager.cpp" />
     <ClCompile Include="Src\Framework\Common\InputManager.cpp" />
     <ClCompile Include="Src\Framework\Common\SceneManager.cpp" />
@@ -222,18 +224,6 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
-    </FxCompile>
-    <FxCompile Include="Asset\Shader\simple_ps.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
-    </FxCompile>
-    <FxCompile Include="Asset\Shader\simple_vs.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
     </FxCompile>
     <FxCompile Include="Asset\Shader\vs.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
